# analise_roi

./: README.md  encoder_midia.pkl  modelo1.pkl  modelo_regressao.pkl  pyproject.toml
.ipynb_checkpoints/: Analise_ROI-checkpoint.ipynb
