[tool.poetry]
name = "desafio-03"
version = "0.1.0"
description = ""
authors = ["Luiz Fernando <luizfsoliveira.lm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
pandas = "^2.2.3"
numpy = "^2.2.4"
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
